--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "react-scripts": "1.0.7"
   },
   "dependencies": {
+    "auth0-js": "^8.8.0",
+    "auth0-lock": "^10.18.0",
     "bootstrap": "3",
     "react": "^15.6.1",
+    "react-apollo": "^1.4.2",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
