--- a/package.json
+++ b/package.json
@@ -1,31 +1,24 @@
 {
-  "name": "crafting-ideas",
+  "name": "ideas",
   "version": "0.1.0",
   "private": true,
-  "devDependencies": {
-    "@storybook/react": "^3.1.3",
-    "enzyme": "^2.8.2",
-    "react-scripts": "1.0.7"
-  },
   "dependencies": {
-    "auth0-js": "^8.8.0",
     "auth0-lock": "^10.18.0",
-    "bootstrap": "3",
     "react": "^15.6.1",
-    "react-apollo": "^1.4.2",
+    "react-apollo": "^1.4.3",
     "react-dom": "^15.6.1",
-    "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
-    "redux": "^3.7.0",
-    "redux-saga": "^0.15.3"
+    "styled-components": "^2.1.1"
+  },
+  "devDependencies": {
+    "enzyme": "^2.9.1",
+    "react-scripts": "1.0.10"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "storybook": "start-storybook -p 9009 -s public",
-    "build-storybook": "build-storybook -s public"
+    "eject": "react-scripts eject"
   }
 }
